# DE-AI-ProjBasedLearning

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_scheduler.py
d1-data-cleaning/: day1.ipynb
src/analysis/: analyzer.py
src/database/: connector.py
src/etl/: generator.py  preprocessor.py
src/model/: inference.py  train.py
src/storage/: s3_uploader.py
